* 2014-08-04 - marcus.klein@open-xchange.com

 - Fix for bug 33891: Removed superfluous line throwing always an exception.

* 2014-08-01 - thorben.betten@open-xchange.com

 - Fix for bug 33715: Accept new parameter "attach_src" for action=get request to let the client signal RFC822 source is supposed to be
                      attached to generated JSON mail representation
 - Fix for bug 33850: Keep "Message-Id" header on message transport

* 2014-07-29 - tobias.friedrich@open-xchange.com

 - Fix for bug 33652: Also accept "updateToken" requests without service identifier 
 - Fix for bug 30654: Try fallback based on the file extension in case there's no preview service for mime type 

* 2014-07-22 - thorben.betten@open-xchange.com

 - Fix for bug 33441: Fixed calculation of "max-age" part in Cache-Control header from given expiry value
 - Fix for bug 31253: Quote-aware parsing of SIEVE script content + reverted changes from commit d695ca1965fbcb98b94ab6705962a2e9201fae3c

* 2014-07-16 - tobias.friedrich@open-xchange.com

 - Fix for bug 33447: Corrected the 'exclude context admin' condition in the search term passed down to the storage layer

* 2014-07-11 - thorben.betten@open-xchange.com

 - Fix for bug 33522: Wrong table was referenced in SQL statement to prepare table "user_attribute" to have UUID as primary key
 - Fix for bug 33525: Use a more unique name for added index to not conflict with MySQL bug http://bugs.mysql.com/bug.php?id=61146
                      (that is fix with >= MySQL 5.6.3)

* 2014-07-09 - tobias.friedrich@open-xchange.com

 - Fix for bug 33485: Don't attempt to delete an empty list of files

* 2014-07-07 - tobias.friedrich@open-xchange.com

 - Fix for bug 33412: Use larger chunks when performing multipart uploads to S3 stores
 - Fix for bug 33422: Made the setting "com.openexchange.filestore.s3.[filestoreID].pathStyleAccess" officially available in the
                      configuration file "filestore-s3.properties"
